==> stm32duino/Arduino_Core_STM8/cores/arduino/stm8/twi.c <==
#include "stm8_def.h"
#include "twi.h"

void i2c_init(i2c_t *obj)
{
  i2c_custom_init(obj, I2C_DEFAULT_SPEED, I2C_ADDMODE_7BIT, 0x33, 1);
}

void i2c_custom_init(i2c_t *obj, uint32_t timing, I2C_AddMode_TypeDef addressingMode,
                     uint16_t ownAddress, uint8_t master)

{
  I2C_LocalObject = obj;


#if defined(STM8Lxx)
  obj->I2Cx = pinmap_peripheral(obj->sda , PinMap_I2C_SDA);
  if(obj->I2Cx == NP) {
     return;
  }

  if (obj->I2Cx  == I2C1)
  {
    CLK_PeripheralClockConfig(CLK_Peripheral_I2C1, ENABLE);
  } else {
    return;
  }
  I2C_DeInit(obj->I2Cx);

  I2C_Init(obj->I2Cx, timing, ownAddress, I2C_Mode_I2C, I2C_DutyCycle_2, I2C_Ack_Enable,
           addressingMode);
  obj->addressingMode = addressingMode;
  obj->Address = ownAddress;
  if (master == 0)
  {
    I2C_ITConfig(obj->I2Cx, (I2C_IT_TypeDef)(I2C_IT_ERR | I2C_IT_EVT | I2C_IT_BUF), ENABLE);
    enableInterrupts();
  }
  obj->init_done = 1;
  obj->isMaster = master;


#elif defined(STM8Sxx)

  void *periph = pinmap_peripheral(obj->sda , PinMap_I2C_SDA);
  if(periph == NP) {
     return;
  }
  
  I2C_DeInit();
  I2C_Init(timing, ownAddress, I2C_DUTYCYCLE_2, I2C_ACK_CURR, addressingMode, (uint8_t)(CLK_GetClockFreq() / 1000000));
  obj->addressingMode = addressingMode;
  obj->Address = ownAddress;
  if (master == 0)
  {
    I2C_ITConfig((I2C_IT_TypeDef)(I2C_IT_ERR | I2C_IT_EVT | I2C_IT_BUF), ENABLE);
    enableInterrupts();
  }
  obj->init_done = 1;
  obj->isMaster = master;
#endif
}

void i2c_deinit(i2c_t *obj)
{
#if defined(STM8Lxx)
  if (obj->I2Cx  == I2C1)
  {
    CLK_PeripheralClockConfig(CLK_Peripheral_I2C1, DISABLE);
  } else {
    return;
  }
  I2C_DeInit(obj->I2Cx);
  obj->init_done = 0;
#elif defined(STM8Sxx)
  I2C_DeInit();
  obj->init_done = 0;
#endif
}

void i2c_setTiming(i2c_t *obj, uint32_t frequency)
{
  if (obj->init_done == 1)
  {
    if (frequency <= I2C_MAX_FAST_FREQ)
    {
      i2c_custom_init(obj, frequency, obj->addressingMode, obj->Address, obj->isMaster);
    }
  }
}

i2c_status_e i2c_IsDeviceReady(i2c_t *obj, uint8_t dev_address,
                              uint32_t trials)
{
#if defined(STM8Lxx)
  if (obj->init_done == 1)
  {
    /* Send START condition */
    I2C_GenerateSTART(obj->I2Cx, ENABLE);

    /* Test on EV5 and clear it */
    if(i2c_wait_for_event(obj->I2Cx, I2C_EVENT_MASTER_MODE_SELECT) != SUCCESS)
        return I2C_BUSY;

    /* Send slave address + write condition */
    I2C_Send7bitAddress(obj->I2Cx, dev_address, I2C_Direction_Transmitter);

    if(i2c_wait_for_event(obj->I2Cx, I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED) != SUCCESS){
        return I2C_TIMEOUT;
    } else {
        /*!< Clear AF flag */
        I2C_ClearFlag(obj->I2Cx, I2C_FLAG_AF);

        /*!< STOP condition */
        I2C_GenerateSTOP(obj->I2Cx, ENABLE);

        return I2C_OK;
    }
  }
  else
  {
    return I2C_ERROR;
  }
#elif defined(STM8Sxx)
  if (obj->init_done == 1)
  {
    /* Send START condition */
    I2C_GenerateSTART(ENABLE);

    /* Test on EV5 and clear it */
    if(i2c_wait_for_event(I2C_EVENT_MASTER_MODE_SELECT) != SUCCESS)
        return I2C_BUSY;

    /* Send slave address + write condition */
    I2C_Send7bitAddress(dev_address, I2C_DIRECTION_TX);
    if(i2c_wait_for_event(I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED) != SUCCESS){
        return I2C_TIMEOUT;
    } else {
        /*!< Clear AF flag */
        I2C_ClearFlag(I2C_FLAG_ACKNOWLEDGEFAILURE);

        /*!< STOP condition */
        I2C_GenerateSTOP(ENABLE);

        return I2C_OK;
    }
  }
  else
  {
    return I2C_ERROR;
  }
#endif
}

i2c_status_e i2c_master_write(i2c_t *obj, uint8_t dev_address,
                              uint8_t *data, uint8_t size)
{
  if (size == 0) {
    return i2c_IsDeviceReady(obj, dev_address, 1);
  }

#if defined(STM8Lxx)
  if (obj->init_done == 1)
  {
    /* Send START condition */
    I2C_GenerateSTART(obj->I2Cx, ENABLE);

    /* Test on EV5 and clear it */
    if(i2c_wait_for_event(obj->I2Cx, I2C_EVENT_MASTER_MODE_SELECT) != SUCCESS)
        return I2C_BUSY;

    /* Send slave address + write condition */
    I2C_Send7bitAddress(obj->I2Cx, dev_address, I2C_Direction_Transmitter);

    if(i2c_wait_for_event(obj->I2Cx, I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED) != SUCCESS)
        return I2C_BUSY;

    /* Send data */
    while (size != 0)
    {
      I2C_SendData(obj->I2Cx, *data++);
      size--;

      if (size > 0)
      {
        if(i2c_wait_for_event(obj->I2Cx, I2C_EVENT_MASTER_BYTE_TRANSMITTING) != SUCCESS)
          return I2C_BUSY;
      }
    }

    /* Send STOP condition */
    if(i2c_wait_for_event(obj->I2Cx, I2C_EVENT_MASTER_BYTE_TRANSMITTED) != SUCCESS)
        return I2C_BUSY;

    I2C_GenerateSTOP(obj->I2Cx, ENABLE);

    return I2C_OK;
  }
  else
  {
    return I2C_ERROR;
  }
#elif defined(STM8Sxx)
  if (obj->init_done == 1)
  {
    /* Send START condition */
    I2C_GenerateSTART(ENABLE);

    /* Test on EV5 and clear it */
    if(i2c_wait_for_event(I2C_EVENT_MASTER_MODE_SELECT) != SUCCESS)
        return I2C_BUSY;

    /* Send slave address + write condition */
    I2C_Send7bitAddress(dev_address, I2C_DIRECTION_TX);
    if(i2c_wait_for_event(I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED) != SUCCESS)
        return I2C_BUSY;

    /* Send data */
    while (size != 0)
    {
      I2C_SendData(*data++);
      size--;

      if (size > 0)
      {
        if(i2c_wait_for_event(I2C_EVENT_MASTER_BYTE_TRANSMITTING) != SUCCESS)
            return I2C_BUSY;
      }
    }

    /* Send STOP condition */
    if(i2c_wait_for_event(I2C_EVENT_MASTER_BYTE_TRANSMITTED) != SUCCESS)
            return I2C_BUSY;

    I2C_GenerateSTOP(ENABLE);

    return I2C_OK;
  }
  else
  {
    return I2C_ERROR;
  }
#endif
}

i2c_status_e i2c_master_read(i2c_t *obj, uint8_t dev_address, uint8_t *data, uint8_t size)
{
  uint8_t tmpSize = size;
  uint8_t idx = 0;
  if (obj->init_done == 1)
  {
    /* Enable ACK */
#if defined(STM8Lxx)
    I2C_AcknowledgeConfig(obj->I2Cx, ENABLE);
    /* Send START condition */
    I2C_GenerateSTART(obj->I2Cx, ENABLE);

    if(i2c_wait_for_event(obj->I2Cx, I2C_EVENT_MASTER_MODE_SELECT) != SUCCESS)
        return I2C_BUSY;

    /* Send slave address + read condition */
    I2C_Send7bitAddress(obj->I2Cx, dev_address, I2C_Direction_Receiver);

    if(i2c_wait_for_event(obj->I2Cx, I2C_EVENT_MASTER_RECEIVER_MODE_SELECTED) != SUCCESS)
        return I2C_BUSY;

    /* Send data */
    while (size != 0)
    {
      if (tmpSize == 1)
      {
        /* Disable ACK */
        I2C_AcknowledgeConfig(obj->I2Cx, DISABLE);

        /* Send STOP condition */
        I2C_GenerateSTOP(obj->I2Cx, ENABLE);

        tmpSize = 0;
      }
      else if (tmpSize == 2)
      {
        if(i2c_wait_for_event(obj->I2Cx, I2C_EVENT_MASTER_BYTE_RECEIVED) != SUCCESS)
            return I2C_BUSY;

        /* Disable ACK */
        I2C_AcknowledgeConfig(obj->I2Cx, DISABLE);

        while (I2C_GetFlagStatus(obj->I2Cx, I2C_FLAG_BTF) == RESET);

        /* Send STOP condition */
        I2C_GenerateSTOP(obj->I2Cx, ENABLE);

        while (size != 0)
        {
          data[idx++] = I2C_ReceiveData(obj->I2Cx);
          size--;
        }

        tmpSize = 0;
      }
      else if ((tmpSize > 2) && (size == 3))
      {
        while (I2C_GetFlagStatus(obj->I2Cx, I2C_FLAG_BTF) == RESET);

        /* Disable ACK */
        I2C_AcknowledgeConfig(obj->I2Cx, DISABLE);

        data[idx++] = I2C_ReceiveData(obj->I2Cx);
        size--;

        /* Send STOP condition */
        I2C_GenerateSTOP(obj->I2Cx, ENABLE);

        data[idx++] = I2C_ReceiveData(obj->I2Cx);
        size--;
        tmpSize = 0;
      }

      /* Read data received */
      if (I2C_GetFlagStatus(obj->I2Cx, I2C_FLAG_RXNE) == SET)
      {
        data[idx++] = I2C_ReceiveData(obj->I2Cx);
        size--;
      }
    }
  }
  else
  {
    return I2C_ERROR;
  }

  return I2C_OK;

#elif defined(STM8Sxx)
    I2C_AcknowledgeConfig(I2C_ACK_CURR);
    /* Send START condition */
    I2C_GenerateSTART(ENABLE);
    if(i2c_wait_for_event(I2C_EVENT_MASTER_MODE_SELECT) != SUCCESS)
        return I2C_BUSY;

    /* Send slave address + read condition */
    I2C_Send7bitAddress(dev_address, I2C_DIRECTION_RX);
    if(i2c_wait_for_event(I2C_EVENT_MASTER_RECEIVER_MODE_SELECTED) != SUCCESS)
        return I2C_BUSY;

    /* Send data */
    while (size != 0)
    {
      if (tmpSize == 1)
      {
        /* Disable ACK */
        I2C_AcknowledgeConfig(I2C_ACK_NONE);

        /* Send STOP condition */
        I2C_GenerateSTOP(ENABLE);

        tmpSize = 0;
      }
      else if (tmpSize == 2)
      {
        if(i2c_wait_for_event(I2C_EVENT_MASTER_BYTE_RECEIVED) != SUCCESS)
            return I2C_BUSY;

        /* Disable ACK */
        I2C_AcknowledgeConfig(I2C_ACK_NONE);

        while (I2C_GetFlagStatus(I2C_FLAG_TRANSFERFINISHED) == RESET);

        /* Send STOP condition */
        I2C_GenerateSTOP(ENABLE);

        while (size != 0)
        {
          data[idx++] = I2C_ReceiveData();
          size--;
        }

        tmpSize = 0;
      }
      else if ((tmpSize > 2) && (size == 3))
      {
        while (I2C_GetFlagStatus(I2C_FLAG_TRANSFERFINISHED) == RESET);

        /* Disable ACK */
        I2C_AcknowledgeConfig(I2C_ACK_NONE);

        data[idx++] = I2C_ReceiveData();
        size--;

        /* Send STOP condition */
        I2C_GenerateSTOP(ENABLE);

        data[idx++] = I2C_ReceiveData();
        size--;
        tmpSize = 0;
      }

      /* Read data received */
      if (I2C_GetFlagStatus(I2C_FLAG_RXNOTEMPTY) == SET)
      {
        data[idx++] = I2C_ReceiveData();
        size--;
      }
    }
  }
